<resources>
    <!--    TextView Text    -->
    <string name="app_name">ActiveSync</string>
    <string name="homepage_greeting">Good morning, &lt;UserName&gt;!</string>
    <string name="recovery_status_greeting">Recovery Status</string>
    <string name="recovery_status_instructions">Check the recovery status of each muscle group and get an estimate of how long it will be before they are fully recovered.</string>
    <string name="calendar_greeting">Calendar View</string>
    <string name="log_workout_greeting">New Workout</string>
    <string name="log_workout_description">Choose an exercise type and enter date and duration details, then fill out as many sets as you\'d like below before hitting \"submit\".</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="exercise_type_hint">Dumbbell Incline Bench Press</string>
    <string name="workout_date">Date</string>
    <string name="date_hint">3/1/2024</string>
    <string name="workout_duration">Duration</string>
    <string name="duration_hint">30m</string>
    <string name="submit_workout">Submit</string>
    <string name="discard_workout">Discard</string>
    <string name="num_reps">Repetitions</string>
    <string name="num_reps_hint">5</string>
    <string name="weight_hint">70 lbs</string>
    <string name="weight">Weight</string>
    <string name="set_number">Set 1</string>
    <string name="track_progress_greeting">Track Progress</string>

    <!--    Button Text    -->
    <string name="log_workout_button">Log a Workout</string>
    <string name="calendar_button">Calendar View</string>
    <string name="recovery_status_button">Recovery Status</string>
    <string name="track_progress_button">Track Progress</string>
    <string name="gym_locator_button">Gym Locator</string>
    <string name="back_button">Return</string>

    <!--    Icon Text    -->
    <string name="home_icon_text">Home</string>
    <string name="log_workout_icon_text">Log</string>
    <string name="recovery_icon_text">Recovery</string>
    <string name="calendar_icon_text">Calendar</string>
    <string name="progress_icon_text">Progress</string>
    <string name="gym_locator_text">Gym Locator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Google Maps API KEY -->
    <string name="map_api_key">AIzaSyD4mlT6JrAHteKMALv9yK7WeNjqWq3w2Hs</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="login_button_text">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_view_title">Login</string>
    <string name="already_registered">Already registered?</string>
    <string name="nuke_database">💣 Nuke Database 💣</string>
    <string name="debugging_view_nsaved_workouts">[DEBUGGING VIEW]\nSAVED WORKOUTS</string>
    <string name="track_progress_subtitle">Select an exercise type to view progress over the selected interval of time.</string>
    <string name="track_progress_title">Progress Tracker</string>
    <string name="track_progress_exercise_type_label">Exercise Type</string>
    <string name="end_date_picker_label">To</string>
    <string name="start_date_picker_label">From</string>
    <string name="date_picker_hint">Click to choose...</string>
    <string name="log_out">Log Out</string>
    <string name="abbrev_sunday">Su</string>
    <string name="abbrev_monday">M</string>
    <string name="abbrev_tuesday">T</string>
    <string name="abbrev_wednesday">W</string>
    <string name="abbrev_thursday">Th</string>
    <string name="abbrev_friday">F</string>
    <string name="abbrev_saturday">Sa</string>
    <string name="calendar_button_placeholder">X</string>
</resources>