<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="36dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_view_title"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_email"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:drawablePadding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_password"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:drawablePadding="8dp"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login_button_text"
                android:id="@+id/login_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius = "20dp"
                />

            <Button
                android:id="@+id/signup_redirect_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/not_registered_yet"
                android:textSize="14sp"
                android:textAllCaps="false"
                app:cornerRadius = "20dp"
                style="?attr/borderlessButtonStyle"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>