<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="85dp">

        <TextView
            android:id="@+id/greeting_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homepage_greeting"
            android:textAlignment="center"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="60dp">

        <Button
            android:id="@+id/log_workout_button"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:textAlignment="center"
            android:layout_marginBottom="25dp"
            android:text="@string/log_workout_button"
            android:visibility="gone"/>

        <Button
            android:id="@+id/calendar_view_button"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:textAlignment="center"
            android:layout_marginBottom="25dp"
            android:text="@string/calendar_button"
            android:visibility="gone"/>

        <Button
            android:id="@+id/recovery_status_button"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:textAlignment="center"
            android:layout_marginBottom="25dp"
            android:text="@string/recovery_status_button"
            android:visibility="gone"/>

        <Button
            android:id="@+id/track_progress_button"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:textAlignment="center"
            android:layout_marginBottom="25dp"
            android:text="@string/track_progress_button"
            android:visibility="gone"/>
        <Button
            android:id="@+id/gym_locator_button"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:textAlignment="center"
            android:layout_marginBottom="25dp"
            android:text="Locate a Gym/GoogleMaps API" />
    </LinearLayout>
</RelativeLayout>